# ufc-scraping

./: Makefile  README.md  TODO.md  pyproject.toml
data/: links_to_events.csv  ufc-raw-data.csv
ufc-scraping/: data_script.py  ufc-scraping.py  ufc_scraping.py
ufc_scraping/: data_script.py  ufc_scraping.py
